<resources>
    <string name="app_name">Exam</string>
    <string name="start">Start</string>
    <string name="campsite_commander">Campsite Commander</string>
    <string name="add_gear">Add Gear</string>
    <string name="exit">Exit</string>
    <string name="add_to_packing_list">add to packing list</string>
    <string name="enter_category">Enter Category</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="enter_item">Enter Item</string>
    <string name="back">Back</string>
    <string name="display">Display</string>
    <string name="output">Output</string>
    <string name="quantity">Quantity</string>
    <string name="exits">Exit</string>
    <string name="add_to_packing_lists">Add to Packing List</string>
    <string name="quantitys">Quantity</string>
</resources>