<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8BC34A"
    tools:context=".DetailedViewScreen">

    <TextView
        android:id="@+id/textOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="52dp"
        android:text="@string/output"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonDisplay"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:layout_marginStart="192dp"
        android:layout_marginTop="440dp"
        android:backgroundTint="@color/black"
        android:text="@string/display"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="184dp"
        android:layout_marginTop="604dp"
        android:backgroundTint="@color/black"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonQuantity"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/black"
        android:text="@string/quantitys"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDisplay" />

</androidx.constraintlayout.widget.ConstraintLayout>